Defer `MappingContext` access in`PersistentEntities`.
We now fetch mapping contexts from Iterable<MappingContext> later, when accessing PersistentEntities API to defer potential resolution when e.g. obtaining beans from a BeanFactory.

Closes #3310